<resources>
    <string name="add_subtask_button_text">Add subtask</string>
    <string name="add_task">Add task</string>
    <string name="add_category">Add list</string>
    <string name="back">Back</string>
    <string name="categories_image_button">List management</string>
    <string name="categories_list_toolbar_title">List management</string>

    <string name="reminder_done_button_text">Complete</string>
    <string name="reminder_later_button_text">Snooze</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="bottom_sheet_edit_text_hint">Add task</string>
    <string name="categories_add_new_category_item_text">+ New list</string>
    <string name="fragment_add_category_text_input_hint">New list</string>
    <string name="fragment_add_category_save_button_text">Save</string>
    <string name="fragment_add_task_text_input_hint">New task</string>
    <string name="new_task_set_time_content_description">Set time</string>
    <string name="fragment_add_task_save_button_text">Save</string>
    <string name="fragment_edit_category_text_input_hint">Edit list</string>
    <string name="fragment_edit_category_delete_button_text">Delete</string>
    <string name="fragment_edit_task_top_label_text">Task details</string>
    <string name="fragment_language_header_text">Settings: language</string>
    <string name="fragment_settings_top_bar_text_view_text">Settings</string>
    <string name="app_name">LD Planner</string>
    <string name="personal_category_title">Personal</string>
    <string name="wishlist_category_title">Wishlist</string>
    <string name="notification_channel_name">Reminders</string>
    <string name="notification_title">LD Planner:</string>
    <string name="add_task_fb_description">Add task</string>
    <string name="edit_task_set_time_text">Add date and time</string>
    <string name="home_fragment_tab_layout_description">Choose list</string>
    <string name="settings_section_title_about">ABOUT</string>
    <string name="settings_about_privacy_policy_text">Privacy Policy</string>
    <string name="settings_about_version_text">Version 1.29</string>
    <string name="settings_reminders_text_battery_ok">Reminders settings are optimal.</string>
    <string name="settings_reminders_text_need_ignore_optimizations">It is recommended that you change the settings for the reminders to work properly</string>
    <string name="settings_optimize_button_text">Change settings</string>
    <string name="settings_reminders_header_text">REMINDERS</string>
    <string name="home_fragment_list_item_today_text">Today</string>
    <string name="work_category_title_for_first_launch">Work</string>
    <string name="fragment_settings_terms_text_view_text">Terms of Service</string>
    <string name="completed">COMPLETED</string>
    <string name="delete_done_task_dialog_title">Confirmation</string>
    <string name="delete_done_task_dialog_message">Delete all completed tasks?</string>
    <string name="delete_done_task_dialog_cancel_button_text">Cancel</string>
    <string name="delete_category_dialog_message">Delete list with all its tasks?</string>
    <string name="delete_task_dialog_message">Delete task?</string>
    <string name="fragment_edit_task_content_hint">Description</string>
    <string name="fragment_edit_task_edit_title_hint">Title</string>
    <string name="fragment_edit_task_checkbox_text_active">Status: active</string>
    <string name="fragment_edit_task_checkbox_text_done">Status: done</string>
    <string name="fragment_category_content_active_task_title">ACTIVE</string>
    <string name="edit_task_priority_label">Priority</string>
    <string name="fragment_add_task_choose_list_hint_text">To list</string>
    <string name="edit_task_share_button_text">Share</string>
    <string name="settings_fragment_export_error">Can\'t create file</string>
    <string name="settings_fragment_export_success">Exported to Download</string>
    <string name="settings_fragment_permission_error">Can\'t export, need permission</string>
    <string name="fragment_focus_screen_header">Today</string>
    <string name="fragment_edit_task_focus_text">Focus</string>
    <string name="fragment_category_content_empty_placeholder_text">The list is empty</string>
    <string name="export">EXPORT</string>
    <string name="export_data">Export data to file</string>
    <string name="created">Created:</string>
    <string name="cancel">Cancel</string>
    <string name="delete_canceled_tasks_button_text">Delete all canceled tasks?</string>
    <string name="canceled_tasks_card_header">CANCELED</string>
    <string name="mark_active">Mark active</string>
    <string name="cancel_task_text_input_hint">Reason (optional)</string>
    <string name="cancel_task_ok_button_text">OK</string>
    <string name="canceled">Canceled:</string>
    <string name="cancel_reason">Cancel reason:</string>
    <string name="add_task_add_details_input_hint">Add details</string>
    <string name="subtasks">Subtasks</string>
    <string name="task_details_details_edit_text_hint">Add details</string>
    <string name="task_details_subtask_recycler_add_subtask_button_text">Add subtask</string>
    <string name="subtask_recycler_add_subtask_button_text">Add subtask</string>
</resources>