<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cancel_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cancel_task_reason_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/cancel_task_text_input_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="3000"
            android:maxLines="3" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_task_back_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_task_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_task_ok_button_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>